vcluster-demo-cluster-00001-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: vcluster-loadbalancer
  namespace: vcluster-demo-cluster-00001
spec:
  loadBalancerIP: 10.17.12.230
  selector:
    app: vcluster
    release: demo-cluster
  ports:
    - name: https
      port: 443
      targetPort: 8443
      protocol: TCP
  type: LoadBalancer
