vcluster-vcluster-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: vcluster-loadbalancer
  namespace: vcluster
spec:
  loadBalancerIP: 10.17.12.234
  selector:
    app: vcluster
    release: vcluster
  ports:
    - name: https
      port: 443
      targetPort: 8443
      protocol: TCP
  type: LoadBalancer
